--- a/flashcards/app/create/create.module.css
+++ b/flashcards/app/create/create.module.css
@@ -3,3 +3,28 @@
     align-items: center;
     justify-content: space-around;
 }
+
+.cardParent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border: 2px solid gray;
+    border-radius: 1em;
+}
+.inputBuffer {
+    padding: 1.5em;
+    width: 100%;
+}
+.inputField {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+}
+.inputBuffer input {
+    width: 100%;
+}
+.cardList {
+    padding: 1.5em;   
+}
